--- a/assets/stylesheet.css
+++ b/assets/stylesheet.css
@@ -3,6 +3,43 @@
     padding: 0;
     list-Style: none;
 }
+body {
+
+  position: relative;
+  font-family:'Courier New', Courier, monospace;
+  font-size: 20px;
+  background-color: rgb(6, 61, 13);
+  color:  #ffede2
+
+}
+
+h1{
+  text-align: center;
+  font-family: Georgia, 'Times New Roman', Times, serif;
+}
+
+h2,
+h3,
+h4 {
+margin: 20px;
+font-family: Georgia, 'Times New Roman', Times, serif;
+font-weight: 200;
+text-align: left;
+}
+
+
+
+header,footer {
+  height: 60px;
+width: 100%;
+line-height: 60px;
+background-color: #77dbbf;
+}
+
+header {
+  position: fixed;
+  border-bottom: 10px solid #992c81;
+}
 
 nav {
  text-align: right;
@@ -16,42 +53,13 @@ li {
   }
 
 
-header,footer {
-    height: 60px;
-  width: 100%;
-  line-height: 60px;
-  background-color: #77dbbf;
-}
 
-header {
-    position: fixed;
-    border-bottom: 10px solid #992c81;
-  }
 a {
     text-decoration: none;
     color: #ffede2;
   }
   
-h1{
-    text-align: center;
-}
-
-h1,
-h2,
-h3,
-h4 {
-  margin: 20px;
-  font-family: Georgia, 'Times New Roman', Times, serif;
-  font-weight: 200;
-  text-align: left;
-}
-
-body{
-
-    position: relative;
-    font-family:'Courier New', Courier, monospace;
-    font-size: 20px;
-    background-color: rgb(6, 61, 13);
-    color: sandybrown
-
-}
+  main {
+    background-color: white;
+    text-align: left;
+  }
