--- a/assets/stylesheet.css
+++ b/assets/stylesheet.css
@@ -6,34 +6,55 @@
 body {
 
   position: relative;
-  font-family:'Courier New', Courier, monospace;
+  font-family: Georgia, 'Times New Roman', Times, serif;
   font-size: 20px;
-  background-color: rgb(6, 61, 13);
+  background-color: rgb(7, 80, 16);
   color:  #ffede2
 
 }
 
-h1{
-  text-align: center;
-  font-family: Georgia, 'Times New Roman', Times, serif;
+nav {
+ text-align: right;
 }
 
-h2,
+nav li {
+    display: inline;
+    padding: 0px 7px;
+    text-decoration: none;
+  }
+
+
+
+nav a {
+    text-decoration: none;
+    color: #b68668;
+    border: 2px solid white;
+    border-radius: 15%;
+    padding: 7px;
+  }
+  
+
+h1{
+  text-align: left;
+  padding: 20px;
+}
+
+
+/* h2,
 h3,
 h4 {
 margin: 20px;
-font-family: Georgia, 'Times New Roman', Times, serif;
 font-weight: 200;
 text-align: left;
-}
+} */
 
 
 
 header,footer {
   height: 60px;
-width: 100%;
-line-height: 60px;
-background-color: #77dbbf;
+  width: 100%;
+  line-height: 60px;
+  background-color: #77dbbf;
 }
 
 header {
@@ -41,24 +62,8 @@ header {
   border-bottom: 10px solid #992c81;
 }
 
-nav {
- text-align: right;
-}
 
 
-li {
-    display: inline;
-    padding: 0px 20px;
-    text-decoration: none;
-  }
-
-
-
-a {
-    text-decoration: none;
-    color: #ffede2;
-  }
-  
   main {
     background-color: white;
     text-align: left;
